--- a/index.html
+++ b/index.html
@@ -11,3 +11,17 @@
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
+
+
+<!-- 
+1. Go to https://stripe.com and sign up
+2. Get your API keys from Dashboard → Developers → API keys
+3. Use test mode keys for development -->
+
+
+
+<!-- 1. Go to https://console.cloud.google.com
+2. Create new project
+3. Enable Google OAuth API
+4. Create credentials
+5. Set up OAuth consent screen -->
